samples/_failures_safe/1761292500_f3abb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee205e9c.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_ee205e9c.c:153:5: error: expected expression at end of input
  153 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_ee205e9c.c:153:5: error: expected declaration or statement at end of input
